updating authorization logic  and documentation
(login after registration)
